--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "start:dev": "nodemon app.js"
+    "build-css": "node-sass -w assets/stylesheets/stylesheet.scss -o public/stylesheets",
+    "start:dev": "npm run build-css & nodemon -e html,css,js app.js"
+
   },
   "author": "Gabriel Lebec <glebec@gmail.com> (https://github.com/glebec)",
   "license": "MIT",
   "dependencies": {
     "body-parser": "~1.15.2",
+    "bootstrap": "^3.3.6",
     "express": "~4.14.0",
+    "jquery": "^2.2.4",
     "morgan": "~1.7.0",
+    "node-sass": "^3.8.0",
     "pg": "~6.0.1",
     "pg-native": "~1.10.0",
     "sequelize": "~3.23.4",
